Changes to index.html file

--- a/index.html
+++ b/index.html
@@ -35,3 +35,79 @@
             <i class="ri-menu-fill "></i>
           </div>
         </div>
+        <div id="homemain">
+            <div class="heading">
+             <h2>We are a digital <video autoplay
+              loop
+              muted src="https://cdn.cuberto.com/cb/home/hero/1.mp4"></video>
+              <i>design</i> and
+              motion agency</h2>
+            </div>
+          </div>
+          <div id="homefoot">
+            <p>
+              We regularly release design courses, offer advice <br />
+              newbie designers, walk you through creating <br />awesome effects,
+              and share source files.
+            </p>
+          </div>
+        </div>
+        <div id="featured">
+          <div id="fheading">
+            <h1>featured</h1>
+            <div class="doit">
+              <video  autoplay loop  muted src="https://cdn.cuberto.com/cb/home/featured/header.mp4?2"></video>
+            <h1><i>projects</i></h1>
+            </div>
+          </div>
+          <div id="featuredbox">
+            <div id="fleft">
+              <div class="felem">
+                <video  loop muted src="https://cdn.cuberto.com/cb/projects/puntopago/cover.mp4"></video>
+              </div>
+              <h3>Punto page</h3>
+              <div class="felem" style="height: 450px;">
+                <video  loop muted src="https://cdn.cuberto.com/cb/projects/riyadh/cover.mp4"></video>
+              </div>
+              <h3>riyadh</h3>
+              <div class="felem" style="height: 450px;">
+                <video 
+                 loop muted src="https://cdn.cuberto.com/cb/projects/qvino/cover.mp4"></video>
+              </div>
+              <h3>qvino</h3>
+              <div class="felem">
+                <video loop muted src="https://cdn.cuberto.com/cb/projects/zelt/cover.mp4"></video>
+              </div>
+              <h3>zelt</h3>
+            </div>
+            <div id="fright">
+              <div class="felem">
+                <video loop muted src="https://cdn.cuberto.com/cb/projects/flipaclip/cover.mp4"></video>
+              </div>
+              <h3>potion</h3>
+              <div class="felem" style="height: 450px;">
+                <video loop muted src="https://cdn.cuberto.com/cb/projects/kzero/cover.mp4?2"></video>
+              </div>
+              <h3>ferrumpipe</h3>
+              <div class="felem" style="height: 450px;">
+                <video loop muted src="https://cdn.cuberto.com/cb/projects/potion/cover.mp4"></video>
+              </div>
+              <h3>flipaclip</h3>
+              <div class="felem">
+                <video loop muted src="https://cdn.cuberto.com/cb/projects/ferrumpipe/cover.mp4"></video>
+              </div>
+              <h3>magma</h3>
+            </div>
+          </div>
+          <div id="btn">
+            <button>view all projects</button>
+          </div>
+        </div>
+        <div id="dev">
+          <h1>Development and design resources</h1>
+          <p>
+            We regularly release design courses, offer advice to newbie designers,
+            walk you through creating awesome effects, and share source files.
+          </p>
+        </div>
+        
