changes to index.html

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
             <div class="inspo">
               <div class="img">
                 <img
-                  src="https://scontent.cdninstagram.com/v/t51.29350-15/448224472_1136112281053760_6819421041192435539_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=18de74&_nc_ohc=C0ertiVl_yYQ7kNvgFNG5e5&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AYAWXbEYCvdwMcI1ikF_JHLqWqIEDr6roW0XAq9gImKReQ&oe=66806CDD"
-                  alt=""
+                  src="https://cuberto.com/assets/smfeed/dribbble/original-821da127f76b743eaf66a65bfe1482ae.png"
+                  alt="image"
                 />
               </div>
               <div class="tagicon">
@@ -181,8 +181,8 @@
             <div class="inspo">
               <div class="img">
                 <img
-                  src="https://scontent.cdninstagram.com/v/t51.29350-15/447782419_1000146605089838_6015703961655881459_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=18de74&_nc_ohc=72_gWBwZS98Q7kNvgESVYEE&_nc_ht=scontent.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AYDsZvkB2FIAA8w_E-bB006dbzDefXT1etNAk9Docc6w2g&oe=66809719"
-                  alt=""
+                  src="https://cuberto.com/assets/smfeed/dribbble/original-e8a2e9d54561c1019d2a26b467c2fb7b.png"
+                  alt="image"
                 />
               </div>
               <div class="tagicon">
